# routes/item.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 const itemController = require('../controllers/item');
 
+router.get('/', itemController.getAllItems);
 router.get('/:id', itemController.getOneItem);
 router.post('/', itemController.createItem);
 
