# routes/users.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 const userController = require('../controllers/user');
 
+router.get('/', userController.getAllUsers);
 router.get('/:id', userController.getOneUser);
 router.post('/', userController.createUser);
 
